[gd_scene load_steps=3 format=3 uid="uid://5o6gtyuw71tw"]

[ext_resource type="FontFile" uid="uid://cm7sfqav7lc77" path="res://fonts/Xolonium-Regular.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://c2kdxwmr20m04" path="res://src/hud.gd" id="1_64ctp"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -280.0
offset_right = 88.5
offset_bottom = -194.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 100.0
offset_right = 160.0
offset_bottom = 259.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -120.0
offset_right = 20.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]

[node name="XmlInputer" type="CodeEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -791.0
offset_top = -435.0
offset_right = 833.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = " <root BTCPP_format=\"4\">
     <BehaviorTree>
		<Sequence>
        	<MoveTo  goal=\"15,15\" />
			<MoveTo  goal=\"15,500\" />
			<Move  dir=\"right\" dis=\"500\" />
		</Sequence>
     </BehaviorTree>
 </root>
"
autowrap_mode = 2

[node name="StopButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.0
offset_top = -281.0
offset_right = 88.0
offset_bottom = -195.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "Stop"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="StopButton" to="." method="_on_stop_button_pressed"]
